<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OriginalASO_2014_002</string>
    <string name="action_settings">Settings</string>
    <string name="kyou">今日の一言</string>
    <string name="hitokoto">ひとことを登録</string>
    <string name="mennt">メンテ</string>
    <string name="submit">登録</string>
    <string name="tyekku">ひとことチェック</string>
    <string name="back">戻る</string>
    <string name="sakuzyo">削除</string>

</resources>
