<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txthitokoto"
        android:text="@string/hitokoto" />

    <EditText
        android:id="@+id/edtHitokoto"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txthitokoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/kyou"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnSubmit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnMente"
        android:layout_alignBottom="@+id/btnMente"
        android:layout_marginLeft="68dp"
        android:layout_toRightOf="@+id/btnMente"
        android:text="@string/submit" />

    <Button
        android:id="@+id/btntyekku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSubmit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/tyekku" />

    <Button
        android:id="@+id/btnMente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtHitokoto"
        android:layout_below="@+id/edtHitokoto"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/mennt" />

</RelativeLayout>
